--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <li class="nav-item active">
         <a class="nav-link" href="index.html">
           <i class="fas fa-fw fa-tachometer-alt"></i>
-          <span>Tilastot</span></a>
+          <span>Tilastot2</span></a>
       </li>
 
 
