--- a/index.html
+++ b/index.html
@@ -46,11 +46,6 @@
           <span>Tilastot</span></a>
       </li>
 
-
-
-
-
-
       <!-- Divider -->
       <hr class="sidebar-divider d-none d-md-block">
 
@@ -115,7 +110,7 @@
                   <div class="row no-gutters align-items-center">
                     <div class="col mr-2">
                       <div class="text-xs font-weight-bold text-success text-uppercase mb-1">Rahaa tienattu</div>
-                      <div class="h5 mb-0 font-weight-bold text-gray-800">€22,000</div>
+                      <div class="h5 mb-0 font-weight-bold text-gray-800">€22,023</div>
                     </div>
                     <div class="col-auto">
                       <i class="fas fa-euro-sign fa-2x text-gray-300"></i>
@@ -158,7 +153,7 @@
                 <!-- Card Body -->
                 <div class="card-body">
                   <div class="table-responsive">
-                <table id="Player_info" class="table" width="100%" cellspacing="0">
+                <table id="Player_info" class="table table-hover" width="100%" cellspacing="0">
                   <thead>
                       <tr>
                         <th>Nimi</th>
@@ -175,11 +170,29 @@
               </div>
             </div>
           </div>
+          <div class="row">
 
-
+            <!-- Area Chart -->
+            <div class="col-xl col-lg-7">
+              <div class="card shadow mb-4">
+                <!-- Card Header - Dropdown -->
+                <!-- <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between"> -->
+                  <a href="#Hka_div" class="d-block card-header py-3 collapsed" data-toggle="collapse" role="button" aria-expanded="false" aria-controls="Hka_div">
+                  <h6 class="m-0 font-weight-bold text-primary">Pelaajan Hka</h6>
+                  </a>
+                <!-- </div> -->
+                <!-- Card Body -->
+                <div class="collapse" id="Hka_div">
+                  <div class="card-body">
+                    <div id = "Hka_pisteet" class="chart-area">
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
         <!-- /.container-fluid -->
-
       </div>
       <!-- End of Main Content -->
 
