--- a/index.html
+++ b/index.html
@@ -143,6 +143,21 @@
             </div>
           </div>
           <div class="row">
+            <!-- Area Chart -->
+            <div class="col-xl col-lg-7">
+              <div class="card shadow mb-4">
+                <!-- Card Header - Dropdown -->
+                <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
+                  <h6 class="m-0 font-weight-bold text-primary">Ketkä pelanneet vastakkain</h6>
+                </div>
+                <!-- Card Body -->
+                <div class="card-body">
+                  <div id = "peli_kerrat" class="chart-area">
+
+                  </div>
+                </div>
+              </div>
+            </div>
             <!-- Pie Chart -->
             <div class="col-xl col-lg-5">
               <div class="card shadow mb-4">
@@ -212,6 +227,8 @@
   <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.20/js/jquery.dataTables.js"></script>
   <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.16/js/dataTables.jqueryui.min.js"></script>
   <script src="https://code.highcharts.com/highcharts.js"></script>
+  <script src="https://code.highcharts.com/modules/sankey.js"></script>
+  <script src="https://code.highcharts.com/modules/dependency-wheel.js"></script>
   <script src="js/base.js" type="text/javascript" charset="utf8"></script>
   <script src="js/Elo_tilastos.js" type="text/javascript" charset="utf8"></script>
 
