Added dark mode

--- a/index.html
+++ b/index.html
@@ -70,7 +70,9 @@
           <button id="sidebarToggleTop" class="btn btn-link d-md-none rounded-circle mr-3">
             <i class="fa fa-bars"></i>
           </button>
-          <!-- <button type="button" class="btn btn-dark">Dark mode</button> -->
+          <ul class="navbar-nav ml-auto">
+            <button id="dark-mode" type="button" class="btn btn-dark">Dark mode</button>
+          </ul>
 
         </nav>
         <!-- End of Topbar -->
