--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
               <div class="card shadow mb-4">
                 <!-- Card Header - Dropdown -->
                 <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
-                  <h6 class="m-0 font-weight-bold text-danger">Viimeisiimät pelit</h6>
+                  <h6 class="m-0 font-weight-bold text-danger">Viimeisimmät pelit</h6>
                   <ul class="navbar-nav ml-auto">
                       <button id="all_games" href="#" data-toggle="modal" data-target="#logoutModal" type="button" class="btn btn-danger">Kaikki pelit</button>
                   </ul>
@@ -231,6 +231,7 @@
                             <th>Nimi</th>
                              <th>Elo</th>
                              <th title = "Ottelukeskiarvo">Oka</th>
+                             <th title = "Pelitulosten vaihtelu">Pelien Δ</th>
                              <th>N.</th>
                              <th>Voitot</th>
                              <th>Häviöt</th>
