Lisätty kaksi lisäinfo
Lisätty paras peli
Lisätty paras kehitys

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                       <div class="row no-gutters align-items-center">
                         <div class="col mr-2">
                           <div class="text-xs font-weight-bold text-success text-uppercase mb-1">Rahaa tienattu</div>
-                          <div class="h5 mb-0 font-weight-bold text-gray-800">€53,123</div>
+                          <div class="h5 mb-0 font-weight-bold text-gray-800">€113,777</div>
                         </div>
                         <div class="col-auto">
                           <i class="fas fa-euro-sign fa-2x text-gray-300"></i>
@@ -141,6 +141,18 @@
                         <div class="col mr-2">
                           <div class="text-xs font-weight-bold text-uppercase mb-1">Piste rohmu (pisteet/pelit)</div>
                           <div id="elo_player" class="h5 mb-0 font-weight-bold text-gray-800">-</div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-lg-6 mb-4">
+                  <div class="card border-left-success shadow py-2">
+                    <div class="card-body">
+                      <div class="row no-gutters align-items-center">
+                        <div class="col mr-2">
+                          <div class="text-xs font-weight-bold text-success text-uppercase mb-1">Paras kehitys</div>
+                          <div id="Best_rise" class="h5 mb-0 font-weight-bold text-gray-800">-</div>
                         </div>
                       </div>
                     </div>
@@ -231,11 +243,12 @@
                             <th>Nimi</th>
                              <th>Elo</th>
                              <th title = "Ottelukeskiarvo">Oka</th>
+                             <th>Paras</th>
                              <th title = "Pelitulosten vaihtelu">Pelien Δ</th>
                              <th>N.</th>
-                             <th>Voitot</th>
-                             <th>Häviöt</th>
-                             <th>Tasapelit</th>
+                             <th title = "Voitot" >V</th>
+                             <th title = "Häviöt" >H</th>
+                             <th title = "Tasapelit" >T</th>
                           </tr>
                       </thead>
                     </table>
